--- a/Tetris/latex/_input_manager_8h_source.tex
+++ b/Tetris/latex/_input_manager_8h_source.tex
@@ -9,8 +9,8 @@
 \DoxyCodeLine{00006\ \textcolor{keyword}{class\ }\mbox{\hyperlink{class_input_manager}{InputManager}}\ :\ \textcolor{keyword}{public}\ TetrisAPI::IInputManager}
 \DoxyCodeLine{00007\ \{}
 \DoxyCodeLine{00008\ \textcolor{keyword}{public}:}
-\DoxyCodeLine{00009\ \ \ \ \ \textcolor{keywordtype}{bool}\ Check(TetrisAPI::EInputType\ inputType);}
-\DoxyCodeLine{00010\ \ \ \ \ \textcolor{keywordtype}{void}\ Register(TetrisAPI::EInputType\ inputType,\ uint16\_t\ key);}
+\DoxyCodeLine{00009\ \ \ \ \ \textcolor{keywordtype}{bool}\ \mbox{\hyperlink{class_input_manager_a8e049b45caee6bfda3888d6456fc4ac5}{Check}}(TetrisAPI::EInputType\ inputType);}
+\DoxyCodeLine{00010\ \ \ \ \ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{class_input_manager_a6859fdf7f72ff3effbe86c87e901ecb6}{Register}}(TetrisAPI::EInputType\ inputType,\ uint16\_t\ key);}
 \DoxyCodeLine{00011\ \textcolor{keyword}{private}:}
 \DoxyCodeLine{00012\ \ \ \ \ \textcolor{keyword}{struct\ }KeyState}
 \DoxyCodeLine{00013\ \ \ \ \ \{}
@@ -18,8 +18,8 @@
 \DoxyCodeLine{00015\ \ \ \ \ \ \ \ \ \textcolor{keywordtype}{bool}\ lastState;}
 \DoxyCodeLine{00016\ \ \ \ \ \};}
 \DoxyCodeLine{00017\ \textcolor{keyword}{private}:}
-\DoxyCodeLine{00018\ \ \ \ \ \textcolor{keywordtype}{bool}\ Check(KeyState\&\ keyState);}
-\DoxyCodeLine{00019\ \ \ \ \ \textcolor{keywordtype}{bool}\ Check(\textcolor{keyword}{const}\ std::vector<uint16\_t>\&\ keys);}
+\DoxyCodeLine{00018\ \ \ \ \ \textcolor{keywordtype}{bool}\ \mbox{\hyperlink{class_input_manager_a8e049b45caee6bfda3888d6456fc4ac5}{Check}}(KeyState\&\ keyState);}
+\DoxyCodeLine{00019\ \ \ \ \ \textcolor{keywordtype}{bool}\ \mbox{\hyperlink{class_input_manager_a8e049b45caee6bfda3888d6456fc4ac5}{Check}}(\textcolor{keyword}{const}\ std::vector<uint16\_t>\&\ keys);}
 \DoxyCodeLine{00020\ \textcolor{keyword}{private}:}
 \DoxyCodeLine{00021\ \ \ \ \ std::unordered\_map<TetrisAPI::EInputType,\ KeyState>\ m\_registeredInputs;}
 \DoxyCodeLine{00022\ \};}
