--- a/Tetris/latex/refman.tex
+++ b/Tetris/latex/refman.tex
@@ -244,6 +244,7 @@
 \chapter{File Documentation}
 \input{_audio_player_8h_source}
 \input{_draw_manager_8h_source}
+\input{_input_manager_8cpp}
 \input{_input_manager_8h_source}
 %--- End generated contents ---
 % Index
