--- a/Tetris/latex/annotated.tex
+++ b/Tetris/latex/annotated.tex
@@ -1,5 +1,5 @@
 \doxysection{Class List}
 Here are the classes, structs, unions and interfaces with brief descriptions\+:\begin{DoxyCompactList}
-\item\contentsline{section}{\mbox{\hyperlink{class_audio_player}{Audio\+Player}} }{\pageref{class_audio_player}}{}
-\item\contentsline{section}{\mbox{\hyperlink{class_input_manager}{Input\+Manager}} }{\pageref{class_input_manager}}{}
+\item\contentsline{section}{\mbox{\hyperlink{class_audio_player}{Audio\+Player}} \\*Clasa pentru gestionarea efectelor sonore și muzicii din joc }{\pageref{class_audio_player}}{}
+\item\contentsline{section}{\mbox{\hyperlink{class_input_manager}{Input\+Manager}} \\*Gestionarea input-\/urilor utilizatorului pentru jocul Tetris }{\pageref{class_input_manager}}{}
 \end{DoxyCompactList}
