--- a/Tetris/latex/files.tex
+++ b/Tetris/latex/files.tex
@@ -1,7 +1,8 @@
 \doxysection{File List}
 Here is a list of all documented files with brief descriptions\+:\begin{DoxyCompactList}
-\item\contentsline{section}{\mbox{\hyperlink{_audio_player_8h_source}{Audio\+Player.\+h}} }{\pageref{_audio_player_8h_source}}{}
+\item\contentsline{section}{\mbox{\hyperlink{_audio_player_8cpp}{Audio\+Player.\+cpp}} \\*Implementarea clasei \doxylink{class_audio_player}{Audio\+Player} pentru gestionarea efectelor sonore și muzicii din joc }{\pageref{_audio_player_8cpp}}{}
+\item\contentsline{section}{\mbox{\hyperlink{_audio_player_8h}{Audio\+Player.\+h}} \\*Declarația clasei \doxylink{class_audio_player}{Audio\+Player} pentru gestionarea sunetelor din jocul Tetris }{\pageref{_audio_player_8h}}{}
 \item\contentsline{section}{\mbox{\hyperlink{_draw_manager_8h_source}{Draw\+Manager.\+h}} }{\pageref{_draw_manager_8h_source}}{}
 \item\contentsline{section}{\mbox{\hyperlink{_input_manager_8cpp}{Input\+Manager.\+cpp}} \\*Implementarea clasei \doxylink{class_input_manager}{Input\+Manager} pentru gestionarea input-\/urilor utilizatorului }{\pageref{_input_manager_8cpp}}{}
-\item\contentsline{section}{\mbox{\hyperlink{_input_manager_8h_source}{Input\+Manager.\+h}} }{\pageref{_input_manager_8h_source}}{}
+\item\contentsline{section}{\mbox{\hyperlink{_input_manager_8h}{Input\+Manager.\+h}} \\*Declarația clasei \doxylink{class_input_manager}{Input\+Manager} pentru gestionarea input-\/urilor utilizatorului }{\pageref{_input_manager_8h}}{}
 \end{DoxyCompactList}
