--- a/Tetris/latex/refman.tex
+++ b/Tetris/latex/refman.tex
@@ -242,9 +242,12 @@
 \input{class_audio_player}
 \input{class_input_manager}
 \chapter{File Documentation}
+\input{_audio_player_8cpp}
+\input{_audio_player_8h}
 \input{_audio_player_8h_source}
 \input{_draw_manager_8h_source}
 \input{_input_manager_8cpp}
+\input{_input_manager_8h}
 \input{_input_manager_8h_source}
 %--- End generated contents ---
 % Index
